--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -1,7 +1,11 @@
-.containerAbout {    
-    height: 900px;
+.containerAbout {
+    height: 70vh;
     .titleAbout {
-        text-align: center;        
+        text-align: center;
+
+        h2:first-child {
+            margin-top: 30px;
+        }
 
         h2 {
             font-size: 28px;
@@ -11,32 +15,74 @@
         }
 
         p {
-            font-size: 13px;
-            font-weight: 500;
+            font-size: 16px;
+            font-weight: 300;
             line-height: 24px;
-            margin: 0 0 100px 0;
+            margin: 20px 0 100px 0;
         }
     }
 
     .skillsAbout {
         border: 1px solid var(--white);
-        margin: 0 20px;
+        margin: 0 20px 0 60px;
 
-        img {            
+        img {
             width: 53px;
             margin: 40px 4px;
         }
 
         h4 {
             font-size: 18px;
-            font-weight: 600;            
+            font-weight: 600;
             margin-top: 25px;
         }
 
         .skills {
             margin-left: 25px;
         }
+    }
+}
 
-        
+@media only screen and (max-width: 992px) {
+    .containerAbout {        
+        height: 100%;
+        .titleAbout {
+            text-align: center;           
+            margin-top: 80px;
+    
+            p {
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 24px;
+                margin: 50px 0;
+            }
+        }
+    
+        .skillsAbout {
+            margin: 20px 20px;
+    
+            img {
+                width: 53px;
+                margin: 40px 0px;                                
+            }
+    
+            h4 {
+                font-size: 18px;
+                font-weight: 600;
+                margin-top: 25px;
+            }
+    
+            .skills {
+                margin-left: 20px;
+
+                p {
+                    font-size: 13px;
+                }
+            }
+
+            .aboutContent {
+                margin-left: 25px;
+            }
+        }
     }
 }
