--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -3,50 +3,26 @@
     .navbar-brand {
         font-weight: 300;
         
-        
         span {
             color: var(--white);
         }
 
         span:first-child {
             font-weight: 800;            
-            
         }
     }
 
     .navbar-nav .nav-link {
         color: var(--white) !important;
     }
+    
+    button {
+        border: unset;
+        border-radius: 25px;
 
-    .navbar-nav .btn-contact {
-        color: #fff;
-        border: none;
-        background: linear-gradient(270deg, #d71489 -1.04%, #004788 100%);
-        border-radius: 3.47885px;
-        position: relative;
+        a {
+            text-decoration: none;
+            color: var(--white);
+        }
     }
-
-    .navbar-nav .btn-contact span {
-        position: relative;
-        z-index: 3;
-    }
-
-    .navbar-nav .btn-contact::after {        
-        position: absolute;
-        content: "";
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 3.47885px;
-        background: linear-gradient(270deg, #004788 -1.04%, #d71489 100%);
-        transition: opacity 1s ease-out;
-        z-index: 2;
-        opacity: 0;
-    }
-
-    .navbar-nav .btn-contact:hover:after {
-        opacity: 1;
-        border: 1px solid #DAA520;
-      }
 }
