--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -26,7 +26,7 @@
     .heroBtn button {  
         border: none;
         border-radius: 25px;
-
+        margin-top: 1rem;
         a {
             text-decoration: none;
             color: var(--white);
@@ -44,7 +44,8 @@
         border-radius: 50%;
         top: 40px;
         left: 140px;
-    }
+    }    
+    
 }
 
 @media only screen and (max-width: 992px) {
